// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> is empty by default 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
    ]
  }
>
  <styled.div>
    <div
      className="sc-gzVnrw kdeHEh"
    >
      <styled.table>
        <table
          className="sc-htoDjs kKCJWi"
        >
          <tbody>
            <tr
              key="0"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="1"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="2"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
            </tr>
            <tr
              key="3"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                   
                </td>
              </styled.td>
            </tr>
          </tbody>
        </table>
      </styled.table>
    </div>
  </styled.div>
</Board>
`;

exports[`<Board /> is filled when the game has started 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        "E",
        "H",
        "R",
        "T",
      ],
      Immutable.List [
        "B",
        "I",
        "T",
        "E",
      ],
      Immutable.List [
        "G",
        "I",
        "S",
        "F",
      ],
      Immutable.List [
        "A",
        "M",
        "N",
        "O",
      ],
    ]
  }
>
  <styled.div>
    <div
      className="sc-gzVnrw kdeHEh"
    >
      <styled.table>
        <table
          className="sc-htoDjs kKCJWi"
        >
          <tbody>
            <tr
              key="0"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  E
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  H
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  R
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  T
                </td>
              </styled.td>
            </tr>
            <tr
              key="1"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  B
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  I
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  T
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  E
                </td>
              </styled.td>
            </tr>
            <tr
              key="2"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  G
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  I
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  S
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  F
                </td>
              </styled.td>
            </tr>
            <tr
              key="3"
            >
              <styled.td
                key="0"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  A
                </td>
              </styled.td>
              <styled.td
                key="1"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  M
                </td>
              </styled.td>
              <styled.td
                key="2"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  N
                </td>
              </styled.td>
              <styled.td
                key="3"
              >
                <td
                  className="sc-dnqmqq gqowcB"
                >
                  O
                </td>
              </styled.td>
            </tr>
          </tbody>
        </table>
      </styled.table>
    </div>
  </styled.div>
</Board>
`;
